[project]
name = "smartptf"
version = "0.1.0"
description = ""
authors = [
    { name = "Etienne", email = "etienne.larchet@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "yfinance>=0.2.55,<0.3.0",
    "pandas>=2.2.3,<3.0.0",
    "numpy>=2.2.4,<3.0.0",
    "pydantic>=2.11.2,<3.0.0",
    "polars>=1.26.0,<2.0.0",
    "ruff>=0.11.5,<0.12.0",
    "scipy>=1.15.2,<2.0.0",
    "dotenv>=0.9.9,<0.10.0",
    "requests>=2.32.3,<3.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "streamlit>=1.45.0,<2.0.0",
    "plotly>=6.0.1,<7.0.0",
    "pulp>=3.1.1,<4.0.0",
    "statsforecast>=2.0.1,<3.0.0",
    "matplotlib>=3.10.1,<4.0.0",
    "gymnasium>=1.1.1,<2.0.0",
    "stable-baselines3[extra]>=2.6.0,<3.0.0",
    "sbx-rl>=0.20.0,<0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 120
select = [
    "E",
    "F",
    "B",
    "I",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.pytest.ini_options]
log_cli = true
