[project]
name = "smartptf"
version = "0.1.0"
description = ""
authors = [
    { name = "Etienne", email = "etienne.larchet@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "yfinance>=0.2.55,<0.3.0",
    "numpy>=2.2.4,<3.0.0",
    "pydantic>=2.11.2,<3.0.0",
    "polars>=1.26.0,<2.0.0",
    "scipy>=1.15.2,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "requests>=2.32.3,<3.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "streamlit>=1.45.0,<2.0.0",
    "plotly>=6.0.1,<7.0.0",
    "pulp>=3.1.1,<4.0.0",
    "statsforecast>=2.0.1,<3.0.0",
    "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
ai = [
    "gymnasium>=1.1.1,<2.0.0",
    "stable-baselines3[extra]>=2.6.0,<3.0.0",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src",
]

[tool.ruff]
line-length = 120
select = [
    "E",
    "F",
    "B",
    "I",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.pytest.ini_options]
log_cli = true

[tool.deptry]
extend_exclude = [
    "test",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
